improve use case, move repository implementation

--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -1,3 +1,14 @@
 index:
     path: /
     controller: App\Controller\DefaultController
+    methods: ['GET']
+
+create_user:
+    path: /users
+    controller: App\Controller\UserController::create
+    methods: ['POST']
+
+get_user:
+    path: /users/{id}
+    controller: App\Controller\UserController::get
+    methods: ['GET']
