--- a/app/composer.json
+++ b/app/composer.json
@@ -5,13 +5,14 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "ramsey/uuid": "^4.0",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
-        "symfony/yaml": "5.0.*",
-        "ext-json": "*"
+        "symfony/messenger": "5.0.*",
+        "symfony/yaml": "5.0.*"
     },
     "require-dev": {
         "behat/behat": "^3.6",
